# vllm-mindspore

./: .gitignore  .gitmodules  Dockerfile  OWNERS  README.md  README_en.md  build_image.sh  install_depend_pkgs.sh  install_vllm.sh  pyproject.toml  requirements.txt  run_vllm_mindone.sh  setup.py  test_vllm.py
.gitee/: PULL_REQUEST_TEMPLATE.en.md  PULL_REQUEST_TEMPLATE.zh-CN.md
.jenkins/test/config/: dependent_package.yaml  dependent_packages.yaml
codecheck_toolkits/: README.md  pyproject.toml  vllm_codecheck.sh
docs/model_cards/qwen3/: qwen3_0_6b.md  qwen3_0_6b_base.md  qwen3_1_7b.md  qwen3_1_7b_base.md  qwen3_32b.md  qwen3_4b.md  qwen3_4b_base.md  qwen3_8b.md  qwen3_8b_base.md
examples/: generate_multimodel_vllm.py  generate_vllm.py  tool_chat_template_deepseekv3_zh_prompt.jinja
patch/msadapter/: 0001-modify-for-vllm_mindspore.patch  0001-msadapter-patch.patch
patch/vllm/: 0001-local.patch
tests/st/python/: set_env.py  test_cases_parallel.py  test_custom.py  test_custom_advstepflash.py  test_demo.py  test_multilora_inference.py  test_sampler.py  test_sampler_v1.py  test_shm_broadcast.py  test_vllm_deepseek_bf16_part.py  test_vllm_deepseek_bf16_part_v1.py  test_vllm_deepseek_gptq_a16w4.py  test_vllm_deepseek_mix_parallel.py  test_vllm_deepseek_osl.py  test_vllm_deepseek_part.py  test_vllm_deepseek_part_v1.py  test_vllm_deepseek_smoothquant.py  test_vllm_deepseek_smoothquant_mss.py  test_vllm_mf_qwen_7b.py  test_vllm_mf_qwen_7b_chunk_prefill.py  test_vllm_mf_qwen_7b_chunk_prefill_v1.py  test_vllm_mf_qwen_7b_cp_pc_mss.py  test_vllm_mf_qwen_7b_mss.py  test_vllm_mf_qwen_7b_prefix_caching.py  test_vllm_mf_qwen_7b_prefix_caching_v1.py  test_vllm_mf_qwen_7b_v1.py  test_vllm_qwen_7b.py  test_vllm_qwen_7b_v1.py
tests/ut/: __init__.py  utils.py
tests/ut/qwen2/: test_attention.py  test_layer.py  test_mlp.py  test_model.py  test_self_attention.py  test_vocab_embedding.py
tool/: launch_server.sh  offline_inference_blip2.py  offline_inference_qwenvl.py  parallel_request.py
vllm_dp/: dp_scale_out.patch  install_dp_vllm.sh
vllm_mindspore/: __init__.py  config.py  entrypoints.py  logger.py  scripts.py  sequence.py  utils.py  version.py
vllm_mindspore/attention/: __init__.py  layer.py  selector.py
vllm_mindspore/attention/backends/: ms_attn.py  utils.py
vllm_mindspore/attention/ops/: paged_attn.py
vllm_mindspore/compilation/: inductor_pass.py
vllm_mindspore/distributed/: communication_op.py  ms_communicate.py  parallel_state.py  shm_broadcast.py  utils.py
vllm_mindspore/engine/: arg_utils.py
vllm_mindspore/engine/multiprocessing/: engine.py
vllm_mindspore/entrypoints/openai/: serving_chat.py
vllm_mindspore/executor/: multiproc_worker_utils.py  ray_gpu_executor.py
vllm_mindspore/inputs/: registry.py
vllm_mindspore/lora/: layers.py  models.py  utils.py
vllm_mindspore/lora/punica_wrapper/: punica_npu.py
vllm_mindspore/model_executor/: custom_op.py  sampling_metadata.py  utils.py
vllm_mindspore/model_executor/layers/: activation.py  layernorm.py  linear.py  logits_processor.py  rejection_sampler.py  rotary_embedding.py  sampler.py  utils.py  vocab_parallel_embedding.py
vllm_mindspore/model_executor/model_loader/: __init__.py  utils.py  weight_utils.py
vllm_mindspore/model_executor/models/: attention_mask.py  blip.py  blip2.py  interfaces.py  llama.py  model_base.py  opt.py  qwen2.py  qwen2_5_vl.py  registry.py  utils.py
vllm_mindspore/multimodal/: inputs.py
vllm_mindspore/ops/: CMakeLists.txt
vllm_mindspore/ops/ascendc/: CMakeLists.txt  adv_step_flash.c  adv_step_flash.h  adv_step_flash_adapter.cpp
vllm_mindspore/ops/module/: adv_step_flash.cpp  module.cpp  module.h
vllm_mindspore/tests/: test_sampler.py
vllm_mindspore/v1/: utils.py
vllm_mindspore/v1/engine/: core.py
vllm_mindspore/v1/executor/: multiproc_executor.py
vllm_mindspore/v1/sample/: rejection_sampler.py  sampler.py
vllm_mindspore/v1/spec_decode/: eagle.py
vllm_mindspore/worker/: cache_engine.py  model_runner.py  profile.py  spec_decode_worker.py  worker.py
(+69 files in other folders)
