[build-system]
# Should be mirrored in requirements-build.txt
requires = [
    "cmake>=3.26",
    "ninja",
    "packaging",
    "setuptools>=61",
    "setuptools-scm>=8.0",
    "torch == 2.5.1",
    "wheel",
    "jinja2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# version_file = "vllm/_version.py" # currently handled by `setup.py:get_version()`

[tool.ruff]
# Allow lines to be as long as 80.
line-length = 80

exclude = [
    # External file, leaving license intact
    "vllm_mindspore/__init__.py",
    "tests/*",
    "setup.py"
]

[tool.ruff.lint.per-file-ignores]
"vllm_mindspore/version.txt" = ["F401"]
"vllm_mindspore/_version.txt" = ["ALL"]
"setup.py" = ["ALL"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    # "I",
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # long line
    "E501"
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

# After fixing type errors resulting from follow_imports: "skip" -> "silent",
# move the directory here and remove it from tools/mypy.sh
files= ["vllm_mindspore/"]
exclude = [
    "vllm_mindspore/model_executor/parallel_utils/|vllm_mindspore/model_executor/models/",
    # Ignore triton kernels in ops.
    'vllm_mindspore/attention/ops/.*\.py$',
    'setup.py',
    'tests/'
]

[[tool.mypy.overrides]]
module = "setup"
ignore_errors = true

[tool.codespell]
ignore-words-list = "dout, te, indicies, subtile, ElementE, CANN"
skip = "./tests/models/fixtures,./tests/prompts,./benchmarks/sonnet.txt,./tests/lora/data,./build"

[tool.isort]
use_parentheses = true
skip_gitignore = true

skip_glob = ["tests/*", "vllm_mindspore/ops/*", "setup.py"]
skip = ["vllm_mindspore/__init__.py"]

[tool.pytest.ini_options]
markers = [
    "skip_global_cleanup",
    "core_model: enable this model test in each PR instead of only nightly",
    "cpu_model: enable this model test in CPU tests",
    "quant_model: run this model test under Quantized category",
    "split: run this test as part of a split",
    "distributed: run this test only in distributed GPU tests",
    "skip_v1: do not run this test with v1",
    "optional: optional tests that are automatically skipped, include --optional to run them",
]